# awscdk-minecraft-flutter-backend

awscdk-minecraft/: app.py  pyproject.toml
awscdk-minecraft/src/cdk_minecraft/: construct_.py  stack.py
awscdk-minecraft/src/cdk_minecraft/deploy_server_batch_job/: job_definition.py  job_queue.py
minecraft-platform-backend-api/: Dockerfile  Justfile  docker-compose.yml  pyproject.toml
minecraft-platform-backend-api/src/minecraft_paas_api/: main.py  settings.py
