[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "wheel", "build", "docutils"]

[project]
name = "minecraft-paas-backend-api"
version = "0.0.0"
readme = "README.md"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "importlib-metadata; python_version<'3.8'",
    "fastapi",
    "requests",
    "boto3",
    "uvicorn",
    "mypy_boto3_cloudformation",
    "mypy_boto3_stepfunctions",
    "loguru",
    "pydantic<2"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist", "moto[stepfunctions,cloudformation]", "httpx"]
lambda = ["mangum"]
dev = ["boto3", "boto3-stubs[stepfunctions,cloudformation]", "mypy", "uvicorn"]
all = ["minecraft-paas-backend-api[lambda,dev,test]"]
